# gherlint

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: CI.yml  release.yml
docs/: conf.py  index.rst  requirements.txt
docs/diagrams/: linting_phase.puml  message_handling_dynamic.puml  message_handling_static.puml  startup_phase.puml  static_representation.puml
docs/exts/: convert_plantuml.py  generate_message_list.py  generate_options_list.py  utils.py
docs/messages/: list_of_messages.rst
docs/options/: list_of_options.rst
docs/technical_reference/: architecture.rst  node_classes.rst
src/gherlint/: __main__.py  config.py  exceptions.py  fixer.py  linter.py  options.py  parser.py  registry.py  reporting.py  statistics.py  utils.py  walker.py
src/gherlint/checkers/: base_checker.py  completeness.py  complexity.py  consistency.py  convention.py  statistics.py
src/gherlint/objectmodel/: __init__.py  nodes.py
tests/: conftest.py
tests/functional/: test_functional.py  test_parse_feature.py
tests/functional/c/: consider_using_background.feature  consider_using_background.txt
tests/functional/d/: duplicated_scenario_name.feature  duplicated_scenario_name.txt  duplicated_tag.feature  duplicated_tag.txt
tests/functional/e/: empty_background.feature  empty_background.txt  empty_feature.feature  empty_feature.txt  empty_scenario.feature  empty_scenario.txt  examples_outside_scenario_outline.feature  examples_outside_scenario_outline.txt
tests/functional/f/: feature_tags_pattern_mismatch.feature  feature_tags_pattern_mismatch.toml  feature_tags_pattern_mismatch.txt  file_has_no_feature.txt
tests/functional/m/: missing_feature_name.feature  missing_feature_name.txt  missing_language.feature  missing_language.txt  missing_parameter.feature  missing_parameter.txt  missing_scenario_name.feature  missing_scenario_name.txt  missing_step_type.feature  missing_step_type.txt
tests/functional/misc/: correct_linenumbers_after_language_patch.feature  correct_linenumbers_after_language_patch.txt  disabled_messages_in_config.feature  disabled_messages_in_config.toml  disabled_messages_in_config.txt
tests/functional/o/: only_given_allowed_in_background.feature  only_given_allowed_in_background.txt  outline_could_be_a_scenario.feature  outline_could_be_a_scenario.txt
tests/functional/r/: feature_tags_pattern_mismatch.toml  scenario_tags_pattern_mismatch.txt
tests/functional/s/: scenario_tags_pattern_mismatch.feature  scenario_tags_pattern_mismatch.toml  scenario_tags_pattern_mismatch.txt
tests/functional/t/: tag_could_be_on_parent.feature  tag_could_be_on_parent.txt
tests/functional/u/: unparseable_file.feature  unparseable_file.txt  unused_parameter.feature  unused_parameter.txt
tests/functional/w/: wrong_language_tag.feature  wrong_language_tag.txt
tests/testdata/: german.feature  test.feature  test_feature_parsed.txt  two_features_in_one_file.feature
tests/testdata/dummy_checkers/checkers/: module_with_multiple_checkers.py  module_with_one_checker.py  module_without_checker.py
tests/unittests/: test_checker_registry.py  test_config.py  test_fixer.py  test_main.py  test_options.py  test_reporting.py
tests/unittests/checkers/: test_base_checker.py  test_consistency.py
tests/unittests/objectmodel/: test_nodes.py
