[project]
name = "gherlint"
version = "0.5.0"
description = "Linter for Gherkin feature files"
authors = [{ name = "Andreas Finkler" }]
license = "MIT license"
readme = "README.md"
keywords = [
  "gherkin",
  "cucumber",
  "lint",
  "static analysis",
  "internal quality",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Topic :: Software Development",
  "Topic :: Software Development :: Testing",
  "Topic :: Software Development :: Quality Assurance",
]
requires-python = ">=3.10"
dependencies = [
  "click>=8.0.1",
  "gherkin-official>=22.0.0",
  "parse>=1.19.0",
  "pydantic (>=1.9.0,<2.0.0)",
  "tomli>=1.0.0",
]

[tool.poetry.scripts]
gherlint = 'gherlint.__main__:cli'

[tool.poetry.group.dev.dependencies]
pylint = "^3.3.6"
pytest = "^8.2.0"
pre-commit = "^4.2.0"
black = "^25.1.0"
isort = "^6.0.0"
pylint-pytest = "^1.1.8"
mypy = "^1.15.0"
Sphinx = ">=7.0"
python-docs-theme = ">=2021.11.1"
sphinxcontrib-plantuml = "^0.22"
plantuml = "^0.3.0"
packaging = "^24.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.master]
load-plugins = "pylint_pytest,pylint.extensions.mccabe"

[tool.pylint.messages_control]
enable = "useless-suppression"
disable = "missing-class-docstring,missing-module-docstring,missing-function-docstring,too-few-public-methods,too-many-positional-arguments"

[tool.pylint.format]
max-line-length = 120

[tool.pylint.design]
max-args = 10

[tool.isort]
profile = "black"
